:zap: styles aligned active background bug fixed

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -188,3 +188,8 @@ body {
   border-radius: 15px;
   padding: 1rem;
 }
+
+.title-container {
+  width: 4rem;
+  max-width: 6rem;
+}
